--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,6 +27,8 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: gradle
+    - name: Fix submodules
+      run: git submodule update --init --recursive
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
