--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,7 +27,7 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: gradle
-    - name: Fix submodules
+    - name: Clone submodules
       run: git submodule update --init --recursive
 
     - name: Grant execute permission for gradlew
