--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,6 +37,16 @@ jobs:
     - name: Set up Android SDK
       uses: android-actions/setup-android@v2
 
+    - name: Install toolchain
+      run: |
+        rustup default stable
+        rustup update stable
+        cargo install cargo-ndk
+        rustup target add armv7-linux-androideabi
+        rustup target install aarch64-linux-android
+        rustup target add i686-linux-android
+        rustup target add aarch64-linux-android
+
     - name: Build APK
       run: ./gradlew assembleRelease
 
