--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,7 +45,7 @@ jobs:
         rustup target add armv7-linux-androideabi
         rustup target install aarch64-linux-android
         rustup target add i686-linux-android
-        rustup target add aarch64-linux-android
+        rustup target add x86_64-linux-android
 
     - name: Build APK
       run: ./gradlew assembleRelease
