--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,11 +38,7 @@ jobs:
       uses: android-actions/setup-android@v2
 
     - name: Setup NDK
-      uses: nttld/setup-ndk@v1.5.0
-      with:
-          ndk-version: r27d
-          link-to-sdk: true
-          local-cache: true
+      run: sdkmanager "ndk;27.0.12077973" "cmake;3.22.1"
         
     - name: Install toolchain
       run: |
