--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -46,7 +46,7 @@ jobs:
         rustup update stable
         cargo install cargo-ndk
         rustup target add armv7-linux-androideabi
-        rustup target install aarch64-linux-android
+        rustup target add aarch64-linux-android
         rustup target add i686-linux-android
         rustup target add x86_64-linux-android
 
