--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -5,10 +5,9 @@ edition = "2024"
 
 [dependencies]
 jni = "0.21.1"
-libc = "0.2.0"
 android_logger = "0.15.1"
 log = "0.4"
-once_cell = "1.21.3"
+nix = { version = "0.30.1", features = ["socket"] }
 
 [lib]
 crate-type = ["cdylib"]
